--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -8111,7 +8111,7 @@ fieldset.captcha {
 	margin-left:  -@margin2;
 }
 
-.alert.alert-block.alert-danger, .alert.alert-block.alert-success{
+.alert.alert-block.alert-danger, .alert.alert-block.alert-success, .alert-warning.messages.warning{
 	clear: both;
 	margin-left: @margin1;
 	margin-right: @margin1;
