--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -6582,6 +6582,24 @@ body.european-week{
 					display:block;
 				}
 			}
+
+			.hwc-partner-private-link-block-title.unpublish{
+				background: #f1efef;
+			    border-color: #aba6a6;
+			    a{
+			    	color:#757272;
+			    	pointer-events: none;
+			    }
+			    
+			    &:hover{
+			    	background: #f1efef;
+			    	border-color: #aba6a6;
+			    	a{
+			    		color:#757272;
+			    	}
+			    	
+			    }
+			}
 		}
 	}
 
@@ -6595,6 +6613,19 @@ body.european-week{
 			&:hover{
 				a{
 					background: url(../images/mpp-create-event-hover.png) 0 50% no-repeat;
+					
+				}
+			}
+		}
+
+		.hwc-partner-private-link-block-title.unpublish{
+			a{
+				background: url(../images/pz-events-disabled.png) 0 50% no-repeat;
+			}
+
+			&:hover{
+				a{
+					background: url(../images/pz-events-disabled.png) 0 50% no-repeat;
 					
 				}
 			}
@@ -6615,9 +6646,20 @@ body.european-week{
 				}
 			}
 		}
+		.hwc-partner-private-link-block-title.unpublish{
+			a{
+				background: url(../images/pz-news-disabled.png) 0 50% no-repeat;
+			}
+			&:hover{
+				a{
+					background: url(../images/pz-news-disabled.png) 0 50% no-repeat;
+					
+				}
+			}
+		}
 	}
 	
-	.pane-hwc-partner-hwc-partner-private-link-2{
+	.pane-hwc-partner-hwc-partner-private-link-3{
 		.hwc-partner-private-link-block-title{
 			a{
 				background: url(../images/pz-good-practice.png) 0 50% no-repeat;
@@ -6631,9 +6673,22 @@ body.european-week{
 				}
 			}
 		}
+
+		.hwc-partner-private-link-block-title.unpublish{
+			a{
+				background: url(../images/mpp-good-practice-disabled.png) 0 50% no-repeat;
+			}
+			&:hover{
+				a{
+					background: url(../images/mpp-good-practice-disabled.png) 0 50% no-repeat;
+					
+				}
+			}
+		}
+
 	}
 
-	.pane-hwc-partner-hwc-partner-private-link-3{
+	.pane-hwc-partner-hwc-partner-private-link-2{
 		.hwc-partner-private-link-block-title{
 			a{
 				background: url(../images/pz-partner-resource.png) 0 50% no-repeat;
