--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -6490,6 +6490,7 @@ body.european-week{
 .logged-in.ocp .profile-edit-links-container{
 	border-bottom: 2px solid #bcd75b;
 	padding-bottom: 3em;
+	margin-bottom: 3em;
 }
 
 .profile-edit-links-container{
