HW20-459 - Development of the Newsletter

--- a/docroot/sites/all/modules/osha/osha_newsletter/includes/css/newsletter.css
+++ b/docroot/sites/all/modules/osha/osha_newsletter/includes/css/newsletter.css
@@ -246,6 +246,16 @@ td.social {
   height: 20px;
 }
 
+.newsletter-section.section-audiovisual thead tr th span{
+  background: url(/sites/all/themes/hwc_frontend/images/spotlight.png) no-repeat 0px 1px;
+  vertical-align: top;
+  padding: 0;
+  color: #003399;
+  padding-left: 24px;
+  font-size: 19px;
+  height: 20px;
+}
+
 .newsletter-section .item {
   padding-top: 10px;
   padding-bottom: 10px;
@@ -451,5 +461,9 @@ p.tweet-link a {
 }
 
 .highlight-item .item-date {
-  color: #575757;
+    color: #59595a;
+    font-family: Arial, sans-serif;
+    font-size: 12px;
+    line-height: 25px;
+    font-weight: bold;
 }
