--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -81,8 +81,11 @@
 		margin-bottom: 1em;
 		margin-top: 1em;
 		.box-before.news{
-			width: 42%;
+			width: 100%;
     		margin-right: 1%;
+    		img{
+    			width: auto;
+    		}
 		}
 		.box-before.events{
 			width: 56%;
@@ -364,8 +367,11 @@
 		flex-direction: row;
 		margin-bottom: 1em;
 		.box-before.news{
-			width: 42%;
+			width: 100%;
     		margin-right: 1%;
+    		img{
+    			width: auto;
+    		}
 		}
 		.box-before.events{
 			width: 56%;
