--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -580,6 +580,7 @@ ul.time-and-counters li .counter-label {
 .before-the-campaign .content-box-before .box-before.news {
   margin-bottom: 2em;
   padding-bottom: 2em;
+  height: 100%;
 }
 .before-the-campaign .content-box-before .box-before.news h3 {
   position: relative;
@@ -7623,6 +7624,10 @@ body.video-page #block-hwc-article-recommended-resources .field-name-title-field
   margin-top: 0;
   margin-bottom: 2em;
 }
+/*MDR-3683*/
+#block-views-news-splash > div > div.view-content > div:nth-child(2) {
+  padding-top: 1.5em;
+}
 .isMobile {
   float: right !important;
 }
@@ -8903,8 +8908,11 @@ body.video-page #block-hwc-article-recommended-resources .field-name-title-field
     margin-top: 1em;
   }
   .before-the-campaign .content-box-before .two-box-column .box-before.news {
-    width: 42%;
+    width: 100%;
     margin-right: 1%;
+  }
+  .before-the-campaign .content-box-before .two-box-column .box-before.news img {
+    width: auto;
   }
   .before-the-campaign .content-box-before .two-box-column .box-before.events {
     width: 56%;
@@ -9090,8 +9098,11 @@ body.video-page #block-hwc-article-recommended-resources .field-name-title-field
     margin-bottom: 1em;
   }
   .before-the-campaign .content-box-before .two-box-column .box-before.news {
-    width: 42%;
+    width: 100%;
     margin-right: 1%;
+  }
+  .before-the-campaign .content-box-before .two-box-column .box-before.news img {
+    width: auto;
   }
   .before-the-campaign .content-box-before .two-box-column .box-before.events {
     width: 56%;
