HW20-459 - Development of the Newsletter

--- a/docroot/sites/all/modules/osha/osha_newsletter/includes/css/newsletter.css
+++ b/docroot/sites/all/modules/osha/osha_newsletter/includes/css/newsletter.css
@@ -250,6 +250,11 @@ td.social {
   height: 20px;
 }
 
+.newsletter-section .section-title span{
+  margin-left: 0;
+  display: inline-block;
+}
+
 .newsletter-section .item {
   padding-top: 10px;
   padding-bottom: 10px;
