--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -95,6 +95,9 @@ html[lang=fr] header.navbar-default .campaigns-header #block-menu-menu-header-lo
 body.logged-in .navbar-header .col-xs-12.col-sm-9 {
   padding-top: 57px;
 }
+body.logged-in .navbar-header .col-xs-12.col-sm-9.toolbar-no {
+  padding-top: 15px;
+}
 body.logged-in.ocp .navbar-header .col-xs-12.col-sm-9 {
   padding-top: 0;
 }
