HW20-730 - Create a video detail page for the audiovisual section of the newsletter

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -215,6 +215,32 @@
     	}
     }
 
+    .node-type-spotlight{
+    	.field-name-field-image{
+			img{
+				float: none;
+	    		margin-right: 0;
+	    		margin-bottom: 1em;
+			}
+		}
+		.field.field-name-field-summary{
+			margin-right: 0;
+    		margin-left: 0;
+		}
+	}
+
+	.node-type-youtube{
+		.field-name-field-youtube{
+			float: none;
+	    	margin-right: 0;
+	    	margin-bottom: 1em;
+		}
+		.field.field-name-field-summary{
+			margin-right: 0;
+    		margin-left: 0;
+		}
+	}
+
 }
 
 
