--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -9026,3 +9026,34 @@ body.video-page{
 		}
 	}
 }
+
+.node-type-spotlight{
+	.back-links{
+		margin-bottom: 1em;
+	}
+	.field-name-field-image{
+		img{
+			float: left;
+    		margin-right: 1em;
+		}
+	}
+	.field.field-name-field-publication-date {
+	    padding-top: 0;
+	    margin-bottom: 0em;
+	    margin-top: 0;
+	}
+	.field.field-name-field-summary {
+		margin-bottom: 1em;
+    	margin-top: 0.5em;
+	}
+}
+
+.node-type-youtube{
+	.back-links{
+		margin-bottom: 1em;
+	}
+	.field-name-field-youtube{
+		float: left;
+    	margin-right: 1em;
+	}
+}
