--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -9057,3 +9057,14 @@ body.video-page{
     	margin-right: 1em;
 	}
 }
+
+body.rel1{
+	header.navbar-default .campaigns-header .navbar-header .header-text {
+		max-width: 320px !important;
+	    padding-left: 1em;
+	    span{
+	    	display: block;
+	    	color: #ef0511;
+	    }
+	}	
+}
