--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -6974,6 +6974,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 	font-style: normal;
 	.quicktabs-tabs{
 		display: inline-block;
+		padding-left: 0;
 		li{
 			border: 1px dotted @color3;
 			float: left;
@@ -9585,10 +9586,10 @@ input#edit-field-image-und-0-upload::before {
 				left: 0px;
 			}
 			.field-type-text-with-summary{
-				padding-right: 15px;
-				padding-left: 15px;
-				width: 67%;
-				margin: 0 auto;
+				padding-right: 25px;
+				padding-left: 25px;
+				width: 100%;
+				margin: 0;
 				p{
 					text-align: left;
     				font-size: 1.2em;
