MHWC-24 - add - coming soon in red to the header slogan

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -8919,4 +8919,13 @@ body.video-page{
 	    margin-top: 0;
 	    margin-bottom: 2em;
 	}
+}body.rel1{
+	header.navbar-default .campaigns-header .navbar-header .header-text {
+		max-width: 320px !important;
+	    padding-left: 1em;
+	    span{
+	    	display: block;
+	    	color: #ef0511;
+	    }
+	}	
 }
