--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -7628,6 +7628,14 @@ body.video-page #block-hwc-article-recommended-resources .field-name-title-field
 #block-views-news-splash > div > div.view-content > div:nth-child(2) {
   padding-top: 1.5em;
 }
+body.rel1 header.navbar-default .campaigns-header .navbar-header .header-text {
+  max-width: 320px !important;
+  padding-left: 1em;
+}
+body.rel1 header.navbar-default .campaigns-header .navbar-header .header-text span {
+  display: block;
+  color: #ef0511;
+}
 .isMobile {
   float: right !important;
 }
