HW20-727 - Good Practice Exchange platform - buttons should follow HWC 20-22 style

--- a/docroot/partner/forms/mvc/view/css/style.css
+++ b/docroot/partner/forms/mvc/view/css/style.css
@@ -113,6 +113,10 @@ input[type=next], button {
     font-size        : 1vw;
 }
 
+button{
+    border-radius: 5px;  
+}
+
 .save_image {
     float : right;
 }
