--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -6875,6 +6875,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 			margin-right: 10px;
 			display: inline-block;
 			font-weight: 500;
+			border-radius: 5px;
 		}
 	}
 	.field-type-file{
