--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -9072,3 +9072,16 @@ body.rel1{
 button, .btn{
 	border-radius: 5px;
 }
+
+.page-node-add-document{
+	.back-to-publications{
+		margin-bottom: 1em;
+		a{
+			font-weight: 600;
+    		padding-left: 0px;
+		}
+		img{
+			margin-right: 5px;
+		}
+	}
+}
