HW20-728 - GPE platform - New document: Button to go back to the private zone is missing

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -7750,7 +7750,7 @@ button,
   margin-bottom: 1em;
 }
 .page-node-add-document .back-to-publications a {
-  font-weight: 600;
+  font-weight: bold;
   padding-left: 0px;
 }
 .page-node-add-document .back-to-publications img {
