--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -9077,7 +9077,7 @@ button, .btn{
 	.back-to-publications{
 		margin-bottom: 1em;
 		a{
-			font-weight: 600;
+			font-weight: bold;
     		padding-left: 0px;
 		}
 		img{
