--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -6007,10 +6007,12 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 				bottom: 1px;
 				right: 0;
 				pointer-events: none;
-				background: @bg-color-2 url("../images/content/arrow-down.png") no-repeat right center;
+				background: @bg-color-2 url("../images/content/arrow-down.png") no-repeat 2px 3px;
 				-moz-box-sizing: border-box;
 				-webkit-box-sizing: border-box;
 				box-sizing: border-box;
+				border-top-right-radius: 5px;
+    			border-bottom-right-radius: 5px;
 			}
 			select {
 				font-style: normal;
