--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -9068,10 +9068,16 @@ body.rel1{
 	}	
 }
 
-
-button, .btn{
-	border-radius: 5px;
+body{
+	button, .btn{
+		border-radius: 5px;
+	}
+	.form-control {
+	    border-top-right-radius: 5px;
+	    border-bottom-right-radius: 5px;
+	}	
 }
+
 
 .page-node-add-document{
 	.back-to-publications{
