HW20-727 - Good Practice Exchange platform - buttons should follow HWC 20-22 style

--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -6063,6 +6063,8 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 					.date-clear{
 						background: url('../images/content/input-calendar.png') no-repeat right top;
 						background-size: 28px 28px;
+						border-top-right-radius: 5px;
+    					border-bottom-right-radius: 5px;
 					}
 				}
 				.form-item-field-start-date-und-0-value-time{
@@ -6077,6 +6079,8 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 					.date-clear{
 						background: url('../images/content/input-calendar.png') no-repeat right top;
 						background-size: 28px 28px;
+						border-top-right-radius: 5px;
+    					border-bottom-right-radius: 5px;
 					}
 				}
 				.form-item-field-start-date-und-0-value2-time{
